[package]
name = "dzahui"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "CFD Library for 2D simulation"
homepage = "https://github.com/Arthur-phys/Dzahui"
documentation = "https://github.com/Arthur-phys/Dzahui"
repository = "https://github.com/Arthur-phys/Dzahui"
readme = "Readme.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "dzahui"
path = "src/lib/mod.rs"

[dependencies]
glutin = "0.28.0"
gl = "0.6.0"
cgmath = "0.18.0"
num = "0.4.0"
image = "0.24.2"
ndarray = "0.15.6"