[package]
name = "Dzahui"
version = "0.1.0-beta.2"
edition = "2021"
license = "MIT"
description = "CFD Library for 2D simulation"
homepage = "https://github.com/Arthur-phys/Dzahui"
documentation = "https://github.com/Arthur-phys/Dzahui"
repository = "https://github.com/Arthur-phys/Dzahui"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "dzahui"
path = "src/lib/mod.rs"

[dependencies]
glutin = "0.28.0"
gl = "0.6.0"
cgmath = "0.18.0"
num = "0.4.0"
image = "0.24.2"
ndarray = "0.15.6"
colored = "2.0.0"
log = {version = "0.4.17", features=["std"]}
regex = "1.7.0"
chrono = "0.4.23"
lazy_static = "1.4.0"